Fixed: Featured images to be 100% on mobile like in the designs

--- a/site-sass/site-specific/site.front-page.scss
+++ b/site-sass/site-specific/site.front-page.scss
@@ -280,6 +280,9 @@ text-decoration: none;
     overflow: hidden;
     position: relative;
     display: block;
+    @include mq(mobile) {
+      margin: 0 -30px;
+    }
 
     span {
       position: absolute;
